--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+html{
+  font-family: 'Merriweather', Times, serif;
+}
 h1 {
   color: #296d98;
   text-align: center;
@@ -60,7 +63,7 @@ form {
   list-style-type: unset;
   padding-left: 20px;
 }
-ul li{
+#questions li{
   display: list-item;
   list-style-type: circle;
 }
