--- a/css/styles.css
+++ b/css/styles.css
@@ -154,13 +154,16 @@ input[type=submit]:hover{
   padding-bottom: 16px;
   margin-top: 1px;
   margin-left: 25em;
+}
 =======
-#about-content p, about-content ul{
-  font-size: 1em;
+
+#about-content p,
+#about-content ul{
+  font-size: 1.2em;
   line-height: 1.1em;
-  margin-right: 5%;
-  margin-left: 5%;
-  margin-bottom: 20px;
+  margin-right: 15%;
+  margin-left: 15%;
+  padding-bottom: 20px;
 }
 #questions{
   background-color: unset;
@@ -199,7 +202,6 @@ input[type=submit]:hover{
     margin-right: 15%;
     margin-left: 15%;
     padding-bottom: 20px;
-
   }
   #questions{
     background-color: unset;
