--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,17 @@ input[type=submit]:hover{
   display: list-item;
   list-style-type: circle;
 }
+.images{
+  display: flex;
+}
+.images div {
+  flex:1;
+  margin:5px; /* need some space ?*/
+}
+.images img {
+  width:100%;
+  border-radius: 50%;
+}
 @media screen and (min-width: 480px) {
   h1{
 
