--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,15 @@ h1 {
   text-align: center;
   font-size: 1.2em;
 }
+h1 img{
+
+}
 li {
   display: inline;
 }
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 10px;
   padding: 0;
   overflow: hidden;
   background-color: #296d98;
@@ -212,6 +215,24 @@ input[type=submit]:hover{
     line-height: 1.1em;
     margin-right: 15%;
     margin-left: 15%;
+    padding-bottom: 20px;
+  }
+  #questions{
+    background-color: unset;
+    list-style-type: unset;
+    padding-left: 40px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  h1{
+
+  }
+  #about-content p,
+  #about-content ul{
+    font-size: 1.2em;
+    line-height: 1.1em;
+    margin-right: 22.5%;
+    margin-left: 22.5%;
     padding-bottom: 20px;
   }
   #questions{
