--- a/css/styles.css
+++ b/css/styles.css
@@ -69,11 +69,9 @@ li a:hover:not(.active) {
   background-color: #192841;
 }
 .footer {
-  position: relative;
-  left: 0;
+  position: fixed;
   bottom: 0;
   width: 100%;
-  height: 20px;
   background-color: #296d98;
   color: white;
   text-align: center;
@@ -246,6 +244,10 @@ input[type=submit]:hover{
 @media screen and (min-width: 768px) {
   h1{
     font-size: 1.8em;
+    text-align: center;
+  }
+  .header > *{
+    vertical-align: middle;
   }
   h3{
     font-size: 1.5em;
@@ -255,12 +257,13 @@ input[type=submit]:hover{
     width: 80%;
   }
   h1 img{
-    display: block;
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
     margin-left: unset;
     width: 200px;
+    display: inline-block;
+    vertical-align: top;
   }
   #about-content p,
   #about-content ul{
