--- a/css/styles.css
+++ b/css/styles.css
@@ -55,11 +55,12 @@ li {
 }
 
 li a {
-  display: block;
+  display: flex;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  flex-wrap: wrap;
 }
 
 li a:hover:not(.active) {
@@ -187,7 +188,10 @@ input[type=submit]:hover{
   margin-left: 25em;
 }
 =======
-
+/*#about-content{
+  margin-right: 10px;
+  margin-left: 10px;
+}
 #about-content p,
 #about-content ul{
   display: inline-block;
@@ -203,6 +207,27 @@ input[type=submit]:hover{
   padding-left: 20px;
 }
 #questions li{
+  display: list-item;
+  list-style-type: circle;
+}*/
+#about-content{
+  padding:unset;
+}
+#about-content p,
+#about-content ul{
+  display: inline-block;
+  font-size: 1em;
+  margin-right: 5%;
+  margin-left: 5%;
+  padding-bottom: 20px;
+}
+#questions{
+  background-color: unset;
+  list-style-type: unset;
+  padding-left: 20px;
+}
+#questions li{
+  margin-left: 10px;
   display: list-item;
   list-style-type: circle;
 }
@@ -231,15 +256,18 @@ input[type=submit]:hover{
   }
   #about-content p,
   #about-content ul{
+    padding: unset;
+    margin:unset;
+    display: inline-block;
     font-size: 1.2em;
     padding-right: 10%;
     margin-left: 10%;
     padding-bottom: 20px;
   }
-  #questions{
-    background-color: unset;
-    list-style-type: unset;
-    padding-left: 30px;
+  #questions li{
+    margin-left: 30px;
+    display: list-item;
+    list-style-type: circle;
   }
 
 @media screen and (min-width: 768px) {
@@ -265,16 +293,18 @@ input[type=submit]:hover{
   }
   #about-content p,
   #about-content ul{
+    padding: unset;
+    display: inline-block;
     font-size: 1.2em;
     line-height: 1.1em;
     margin-right: 15%;
     margin-left: 15%;
     padding-bottom: 20px;
   }
-  #questions{
-    background-color: unset;
-    list-style-type: unset;
-    padding-left: 40px;
+  #questions li{
+    margin-left: 40px;
+    display: list-item;
+    list-style-type: circle;
   }
 }
 @media screen and (min-width: 1100px) {
@@ -292,13 +322,11 @@ input[type=submit]:hover{
   #about-content ul{
     font-size: 1.2em;
     line-height: 1.1em;
-    margin-right: 22.5%;
-    margin-left: 22.5%;
+    margin-right: 24%;
+    margin-left: 24%;
     padding-bottom: 20px;
   }
   #questions{
-    background-color: unset;
-    list-style-type: unset;
     padding-left: 40px;
   }
 
