--- a/css/styles.css
+++ b/css/styles.css
@@ -166,12 +166,13 @@ input[type=submit]{
   color: Azure;
   border: 2px solid steelblue;
 }
+
+
 button{
   padding: 16px 32px;
-  text-align: center;
   display: inline-block;
   font-size: 15px;
-  margin: 20px 840px;
+  margin: 20px 20px;
   background-color: steelblue;
   border-radius: 5px 5px 5px 5px;
   color: Azure;
@@ -506,5 +507,9 @@ button:hover{
     margin-top: 10px;
     margin-left: 6em;
   }
+.button{
+  margin-left: 6em;
+
+}
 
 }
